examples/test/testpolicy4765.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4765
  namespace: namespace113
spec:
  podSelector:
    matchLabels:
      key22: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value36
          key1: value37
      podSelector:
        matchLabels:
          key28: value11
          key13: value28
          key7: value12
